; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_uiDateTimePickerTime.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_uiDateTimePickerTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiDateTimePickerTime(%struct.TYPE_3__* %0, %struct.tm* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.tm*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.tm, align 4
  %7 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store %struct.tm* %1, %struct.tm** %4, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32* @selected(i32 %10)
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @g_date_time_to_unix(i32* %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = call i32 @g_date_time_unref(i32* %14)
  %16 = call %struct.tm* @localtime(i32* %5)
  %17 = bitcast %struct.tm* %6 to i8*
  %18 = bitcast %struct.tm* %16 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %17, i8* align 4 %18, i64 4, i1 false)
  %19 = load %struct.tm*, %struct.tm** %4, align 8
  %20 = call i32 @memcpy(%struct.tm* %19, %struct.tm* %6, i32 4)
  ret void
}

declare dso_local i32* @selected(i32) #1

declare dso_local i32 @g_date_time_to_unix(i32*) #1

declare dso_local i32 @g_date_time_unref(i32*) #1

declare dso_local %struct.tm* @localtime(i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @memcpy(%struct.tm*, %struct.tm*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
